Thu Sep 30 18:44:50 1999  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* rs6000.c (rs6000_build_va_list): Create a TYPE_DECL node
	for the va_list record.

Thu Sep 30 18:34:54 1999  Jan Hubicka  <hubicka@freesoft.cz>

	* i386.c (ix86_adjust_cost): Ignore false ebp dependencies in
	prologues.

Thu Sep 30 18:31:36 1999  Jan Hubicka  <hubicka@freesoft.cz>

	* alias.c: Include insn-flags.h.
	* Makefile.in (alias.o): Update.

Thu Sep 30 18:21:30 1999  Jan Hubicka  <hubicka@freesoft.cz>

	* i386.c (ix86_expand_int_movcc): Convert LEU and GTU comparisons
	to LTU and GEU.  Handle more cases using sbb.

Thu Sep 30 18:18:39 1999  Jan Hubicka  <hubicka@freesoft.cz>

	* i386.md (truncatexfdf splitters): Do not use subreg.
	(fop XFmode patterns): Fix mode in operand testing.

Thu Sep 30 18:04:13 1999  Richard Henderson  <rth@cygnus.com>

	* jump.c (jump_optimize_1): Amend last change to test only the
	form of the operand, not the insn.

	* jump.c (jump_optimize_1) [conditional_move]: Use general_operand
	not register_operand to determine when B may need preloading.

Thu Sep 30 17:39:16 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.md (*): Use nonimmediate not general_operand for SET_DEST.
	(ffsdi2, extxl, insxh, mskxh): Add missing DImode to SET_SRC.
	(call-value patterns): Move to end of file.
	(*): Remove mode from label_ref in (pc) context.
	(movstrqi): Use memory not general_operand for BLKmode operands.
	(prologue_stack_probe_loop, builtin_longjmp): Add missing mode 
	to register_operand operands.
	(peep2 patterns): Convert from commented-out peephole patterns.

Thu Sep 30 14:39:17 1999  Bernd Schmidt  <bernds@cygnus.co.uk>

	* tree.h (enum built_in_function): Rename BUILT_IN_DWARF_REG_SIZE
	to BUILT_IN_INIT_DWARF_REG_SIZES.
	* builtins.c (expand_builtins, case BUILT_IN_INIT_DWARF_REG_SIZES):
	Renamed from BUILT_IN_DWARF_REG_SIZE; call
	expand_builtin_init_dwarf_reg_sizes.
	* c-decl.c (init_decl_processing): Replace __builtin_dwarf_reg_size